[package]
name = "hex_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = { version = "0.4.3", features = ["serde1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
evalexpr = "11.1.0"
rand = { version = "0.8.5", features = ["small_rng"] }
clap = { version = "4.4.2", features = ["derive"] }
anyhow = "1.0.75"
